ing-hotel-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hotel-web
  namespace: prod
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
